--- a/src/app/modules/input/components/orr/orr.component.html
+++ b/src/app/modules/input/components/orr/orr.component.html
@@ -7,13 +7,13 @@
       <form>
         <ion-item>
           <ion-label color="primary" position="floating">Net Worth(OMR '000)</ion-label>
-          <ion-input [value]="networthvalue" ngModel name="netWorthValue" #netWorthValue (change)=log(netWorthValue)
-            type="text">
+          <ion-input *ngIf="scorecard" [value]="networthvalue" ngModel name="netWorthValue" #netWorthValue
+            (change)=log(netWorthValue) type="text" inputmode="numeric">
           </ion-input>
         </ion-item>
         <ion-item>
           <ion-label color="primary">Net Worth Support Documents</ion-label>
-          <ion-select *ngIf="scorecardDictionary && scorecard" [selectedText]="scorecard.customer.supportDocumentsFile"
+          <ion-select *ngIf="scorecardDictionary && scorecard" [selectedText]="scorecard.customer.networth.document"
             interface="action-sheet" ngModel name="supportDocuments" #supportDocuments (ionChange)=log(supportDocuments)
             placeholder="Select One">
             <ion-select-option *ngFor="let netWorth of scorecardDictionary.obligorScores.networthSupport"
@@ -33,14 +33,14 @@
         </ion-item>
         <ion-item>
           <ion-label color="primary" position="floating">Proposed total limit(OMR '000)</ion-label>
-          <ion-input *ngIf="scorecard" [value]="scorecard.customer.proposedLimit" ngModel name="proposedTotalLimit"
-            #proposedTotalLimit (change)=log(proposedTotalLimit) type="number"> </ion-input>
+          <ion-input *ngIf="scorecard" [value]="proposedLimit" ngModel name="proposedTotalLimit" #proposedTotalLimit
+            (change)=log(proposedTotalLimit) type="text" inputmode="numeric"> </ion-input>
         </ion-item>
         <ion-item>
           <ion-label color="primary" position="floating">Total Existing Limit in all banks-BCSB (OMR '000)
           </ion-label>
-          <ion-input *ngIf="scorecardDictionary && scorecard" [value]="scorecard.customer.bcsb.totalExistingLimit"
-            ngModel name="totalExistingLimit" #totalExistingLimit (change)=log(totalExistingLimit) type="number">
+          <ion-input *ngIf="scorecardDictionary && scorecard" [value]="totalLimit" ngModel name="totalExistingLimit"
+            #totalExistingLimit (change)=log(totalExistingLimit) type="text" inputmode="numeric">
           </ion-input>
         </ion-item>
         <ion-item>
