Basic Scorecard component patch DONE and orr patch partial done

--- a/src/app/modules/input/components/getting-started/getting-started.component.html
+++ b/src/app/modules/input/components/getting-started/getting-started.component.html
@@ -7,8 +7,9 @@
       <form>
         <ion-item>
           <ion-label color="primary">Gender</ion-label>
-          <ion-select *ngIf="scorecardDictionary && scorecard" interface="action-sheet" [ngModel]="gender" name="gender"
-            #gender placeholder="Select One" [selectedText]="scorecard.customer.gender">
+          <ion-select *ngIf="scorecardDictionary && scorecard" interface="action-sheet"
+            (ionChange)="sendGender(gender.vale)" [ngModel]="gender" name="gender" #gender placeholder="Select One"
+            [selectedText]="scorecard.customer.gender">
             <ion-select-option value="male">Male</ion-select-option>
             <ion-select-option value="female">Female</ion-select-option>
             <ion-select-option value="others">Others</ion-select-option>
@@ -16,8 +17,9 @@
         </ion-item>
         <ion-item>
           <ion-label color="primary">Age Range</ion-label>
-          <ion-select *ngIf="scorecardDictionary && scorecard" [selectedText]="scorecard.customer.ageRange"
-            interface="action-sheet" [ngModel]="ageRange" name="ageRange" #ageRange placeholder="Select One">
+          <ion-select *ngIf="scorecardDictionary && scorecard" (ionChange)="sendAgeRange(ageRange.vale)"
+            [selectedText]="scorecard.customer.ageRange" interface="action-sheet" [ngModel]="ageRange" name="ageRange"
+            #ageRange placeholder="Select One">
             <ion-select-option *ngFor="let ageRange of scorecardDictionary.obligorScores.ageRange"
               value={{ageRange.value}}>{{ageRange._id+" Years" | titlecase}}</ion-select-option>
           </ion-select>
@@ -25,9 +27,9 @@
         </ion-item>
         <ion-item>
           <ion-label color="primary">Nationality Type</ion-label>
-          <ion-select *ngIf="scorecardDictionary && scorecard" interface="action-sheet" [ngModel]="nationality"
-            name="nationality" #nationality placeholder="Select One"
-            [selectedText]="scorecard.customer.nationalityType">
+          <ion-select *ngIf="scorecardDictionary && scorecard" interface="action-sheet"
+            (ionChange)="sendNationality(nationality.vale)" [ngModel]="nationality" name="nationality" #nationality
+            placeholder="Select One" [selectedText]="scorecard.customer.nationalityType">
             <ion-select-option *ngFor="let nationality of scorecardDictionary.obligorScores.nationality"
               [value]="nationality.value">
               {{nationality._id | titlecase }}</ion-select-option>
