--- a/src/app/modules/input/components/getting-started/getting-started.component.html
+++ b/src/app/modules/input/components/getting-started/getting-started.component.html
@@ -8,7 +8,7 @@
         <ion-item>
           <ion-label color="primary">Gender</ion-label>
           <ion-select *ngIf="scorecardDictionary && scorecard" interface="action-sheet"
-            (ionChange)="sendGender(gender.vale)" [ngModel]="gender" name="gender" #gender placeholder="Select One"
+            (ionChange)="sendGender(gender.value)" [ngModel]="gender" name="gender" #gender placeholder="Select One"
             [selectedText]="scorecard.customer.gender">
             <ion-select-option value="male">Male</ion-select-option>
             <ion-select-option value="female">Female</ion-select-option>
@@ -28,7 +28,7 @@
         <ion-item>
           <ion-label color="primary">Nationality Type</ion-label>
           <ion-select *ngIf="scorecardDictionary && scorecard" interface="action-sheet"
-            (ionChange)="sendNationality(nationality.vale)" [ngModel]="nationality" name="nationality" #nationality
+            (ionChange)="sendNationality(nationality.value)" [ngModel]="nationality" name="nationality" #nationality
             placeholder="Select One" [selectedText]="scorecard.customer.nationalityType">
             <ion-select-option *ngFor="let nationality of scorecardDictionary.obligorScores.nationality"
               [value]="nationality.value">
